--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,13 @@
+version: "3.9"
+
 networks:
   dev:
-
 
 services:
   nginx:
     image: nginx:stable-alpine
     ports:
-      - "80-80"
-    volumes:
-      - ./nginx/conf:/etc/nginx/nginx.conf
+      - "80:80" 
     depends_on:
       - frontend
       - backend
@@ -24,7 +23,7 @@ services:
 
   frontend:
     build:
-      context: ./templates
+      context: ./templates 
       dockerfile: Dockerfile
     networks:
       - dev
