--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -1,12 +1,10 @@
 server {
-    listen 5173;
-
+    listen 80;
+    server_name yourdomain.com;
     root /usr/share/nginx/html;
     index index.html index.htm;
 
     location / {
         try_files $uri $uri/ /index.html;
     }
-    
-    include /etc/nginx/conf.d/*.conf;
 }
