--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,8 +1,11 @@
 FROM python:3.11.9-slim
 
-COPY requirements.txt requirements.txt
+WORKDIR /app
+
+COPY ../requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
 COPY . .
 
-CMD ["python", "main.py"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+
