--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 networks:
   dev:
 
@@ -7,23 +5,26 @@ services:
   nginx:
     image: nginx:stable-alpine
     ports:
-      - "80:80" 
+      - "80:80"
+      - "443:443"
+    volumes:
+      - './nginx.conf:/etc/nginx/nginx.conf'
+      - '/etc/letsencrypt:/etc/letsencrypt'
     depends_on:
-      - frontend
       - backend
+      - frontend
     networks:
       - dev
+    
 
   backend:
     build:
-      context: ./src
-      dockerfile: Dockerfile
+      context: ./backend
     networks:
       - dev
 
   frontend:
     build:
-      context: ./templates 
-      dockerfile: Dockerfile
+      context: ./frontend
     networks:
       - dev
