--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,17 @@
-user root;
-worker_proccesse 1;
+# Кофигурация с поддоменом и SSL сертификатами в файле nginx_subdomain.conf
+user  root;
+worker_processes  1;
 
 events {
 }
 
 http {
     server {
-        listen 80;
-
-        server_name my_to-do.ru;
+        listen       80;
+        server_name  87.228.115.139; # <-- укажите ip адрес вашего сервера
 
         location / {
-            proxy_pass http://frontend:5173/;
+            proxy_pass http://frontend:3000/;
         }
 
         location /api/ {
