--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ events {
 http {
     server {
         listen       80;
-        server_name  87.228.115.139; # <-- укажите ip адрес вашего сервера
+        server_name  87.228.115.139;
 
         location / {
             proxy_pass http://frontend:3000/;
