--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,11 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://backend:8000/tasks/v1;
-        }
+            proxy_pass http://backend:8000/tasks/v1/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_redirect off; 
+    }
     }
 }
