--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://backend:8000/tasks/v1;
+            proxy_pass http://backend:8000;
     }
     }
 }
